--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ericblade/quagga2": "^1.4.2",
+    "@zxing/ngx-scanner": "^3.2.0",
     "angular2-qrscanner": "^1.0.7",
     "angularx-qrcode": "^13.0.2",
+    "ngx-barcode-scanner": "^0.3.0",
+    "ngx-clipboard": "^15.0.1",
+    "ngx-copy-to-clipboard": "^2.3.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
